Cleans and lessen the code